--- a/ble_proxy_base.yaml
+++ b/ble_proxy_base.yaml
@@ -19,16 +19,17 @@ esp32_ble_tracker:
 
 api:
   encryption:
-    key: !secret esphpme_encryption_key
+    key: ${esphome_encryption_key}
 
 ota:
-  password: !secret esphome_ota_password
+  password: ${esphome_ota_password}
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  ssid: ${wifi_ssid}
+  password: ${wifi_password}
+
   ap:
     ssid: "BLE Proxy ${device_id}"
-    password: !secret fallback_ap_password
+    password: ${fallback_ap_password}
 
 captive_portal:
